# template_drf

./: .gitignore  README.md  pyproject.toml
accounts/: admin.py  models.py  permissions.py  urls.py  views.py
config/: settings.py  urls.py
